--- a/food-app/static/styles.css
+++ b/food-app/static/styles.css
@@ -1,7 +1,7 @@
 #grocery_table {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 80%;
+    width: 40%;
 }
 
 #grocery_table td, #grocery_table th {
@@ -21,7 +21,22 @@
     color: white;
 }
 
-.heading h2 {
+#recipe_table {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 40%;
+}
+
+#recipe_table td, #recipe_table th {
+    border: 1px solid #ddd;
+    padding: 6px;
+}
+
+#recipe_table tr:nth-child(even){background-color: #f2f2f2;}
+
+#recipe_table tr:hover {background-color: #ddd;}
+
+.headingold h2 {
     margin: 1em 0 0.5em 0;
     color: blue;
     font-weight: normal;
@@ -30,40 +45,74 @@
     line-height: 16px;
     text-transform: uppercase;
     text-shadow: 0 2px white, 0 3px #777;
+    text-align: center;
 }
 
-#ItemSelection {
-    float: right;
-    padding: 8px;
+.heading {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    font-weight: normal;
+    text-align: center;
 }
 
 #RecipeSelection {
-    float: left;
+    margin: auto;
+    width: 65%;
+    padding: 8px;
+    display: none;
+}
+
+#AddRecipes {
+    margin: auto;
+    width: 70%;
+    padding: 8px;
+    display: none;
+}
+
+#AddRecipesButton {
+    margin: auto;
+    width: 70%;
+    padding: 8px;
+}
+
+#RecipesChoosen {
+    margin: auto;
+    width: 70%;
+    padding: 8px;
+    display: none;
+}
+
+#RecipesForm {
+    margin: auto;
+    width: 40%;
     padding: 8px;
 }
 
 #ShoppingList {
+    margin: auto;
+    width: 65%;
     padding: 8px;
-    display:inline-block;
-}
-
-#Selections {
-    float: left;
+    display: none;
 }
 
 #ListButtons {
     display:inline-block;
 }
 
+#PullOrNew {
+    margin: auto;
+    width: 48%;
+}
+
 .btn {
     background-color: #008CBA; /* Green */
     border: none;
     color: white;
-    padding: 12px 28px;
+    padding: 16px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 12px;
+    font-size: 16px;
     border-radius: 6px;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
@@ -76,9 +125,21 @@
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
+.disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+}
+
 input[type=email] {
     padding:5px; 
     border:2px solid #ccc; 
     -webkit-border-radius: 5px;
     border-radius: 5px;
+}
+
+.center {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    /*border: 3px solid green;*/
 }
